# Nexla-Assignment

./: .dockerignore  .gitignore  AGENTS.md  CLI.sh  Dockerfile  README.md  env.example  ps.md  pyproject.toml
.rough/: implementation_plan.md  notes.md  phases.md
src/nexla_mcp/: __init__.py  __main__.py  config.py  env_secrets.py  indexer.py  inventory.py  mcp.py  models.py  pdf_processor.py  retriever.py  secrets.py  server.py
src/nexla_mcp/indexer/: __init__.py  hf.py  manifest.py  process.py
src/nexla_mcp/llm/: __init__.py  inference.py  prompts.py
tests/: test_indexer.py  test_inference.py  test_llm_inference.py  test_nexla_secrets.py
